ecs-fargate-infra/securitygp.tf
resource "aws_security_group" "ecs_alb_security_group" {
  vpc_id = data.terraform_remote_state.ecs_fargate_infra.outputs.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
